unifying how tests run